--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,46 +1,76 @@
-# Decap CMS Configuration File
-
-# The backend option specifies how to access the content for your site
 backend:
   name: git-gateway
-  branch: master # The branch to update (optional; defaults to master)
+  branch: main
 
-# Uncomment below to enable drafts https://www.decapcms.org/docs/add-to-your-site/#editorial-workflow
-# publish_mode: editorial_workflow
+media_library:
+  name: cloudinary
+  config:
+    cloud_name: "Root"
+    api_key: "156344422126322"
 
-# Uncomment below to enable a link to your published site in the header bar of Decap CMS
-# site_url: https://eleventy-netlify-boilerplate.netlify.app/
+site_url: https://gozen-arts.com
+display_url: https://gozen-arts.com
+logo_url: https://gozen-arts.com/logo.png
 
-media_folder: "static/img" # Media files will be stored in the repo under images/uploads
+# This allows you to save "Drafts" before publishing
+publish_mode: editorial_workflow
 
 collections:
-  # Our blog posts
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Post" # Used in the UI
-    folder: "posts" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Author", name: "author", widget: "string", default: "Anonymous" }
-      - { label: "Summary", name: "summary", widget: "text" }
-      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
-      - { label: "Body", name: "body", widget: "markdown" }
-  # Our pages e.g. About
-  - name: "pages"
-    label: "Page"
-    folder: "pages"
-    create: false # Change to true to allow editors to create new pages
+  # SYSTEM 1: PROGRAM CREATOR
+  # Creates pages at /programs/program-name
+  - name: "programs"
+    label: "Program Creator"
+    folder: "src/programs"
+    create: true
     slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Permalink", name: "permalink", widget: "string" }
-      - label: "Navigation" # https://www.11ty.dev/docs/plugins/navigation/
-        name: "eleventyNavigation"
-        widget: "object"
-        fields:
-          - { label: "Key", name: "key", widget: "string" }
-          - { label: "Order", name: "order", widget: "number", default: 0 }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - {label: "Program Name", name: "title", widget: "string"}
+      - {label: "URL Slug", name: "slug", widget: "string", hint: "e.g. dansing"}
+      - {label: "SEO Description", name: "description", widget: "text"}
+      - {label: "Cover Image", name: "image", widget: "image"}
+      - {label: "Main Content", name: "body", widget: "markdown"}
+
+  # SYSTEM 2: TEACHER FIELDS (The Categories)
+  # This is where you create "Singing", "Dancing", "Acting"
+  - name: "fields"
+    label: "Teacher Programs Creator"
+    folder: "src/fields"
+    create: true
+    slug: "{{slug}}"
+    identifier_field: "title"
+    fields:
+      - {label: "Field Name", name: "title", widget: "string"}
+      - {label: "Description", name: "intro", widget: "text", required: false}
+
+  # SYSTEM 3: TEACHER CREATOR
+  # Creates teacher profiles. Links to the Fields above.
+  - name: "teachers"
+    label: "Teacher Creator"
+    folder: "src/teachers"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Teacher Name", name: "title", widget: "string"}
+      - {label: "Profile Photo", name: "photo", widget: "image"}
+      # This is the magic dropdown that connects to System 2
+      - label: "Field of Study"
+        name: "field"
+        widget: "relation"
+        collection: "fields"
+        search_fields: ["title"]
+        value_field: "title"
+        multiple: true
+      - {label: "Bio", name: "body", widget: "markdown"}
+
+  # SYSTEM 4: BLOG CREATOR
+  # Standard blog posts with dates
+  - name: "blog"
+    label: "Blog Creator"
+    folder: "src/posts"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image"}
+      - {label: "Body", name: "body", widget: "markdown"}
